# jeanmichelbackend.blog

./: CNAME  Makefile  about.html  blog.opam  dune-project  index.html  index.md
.github/workflows/: deploy.yaml
articles/: foo.html  foo.md
pages/: about.md  index.md
templates/: article.html  layout.html
